syntax = "proto3";
package bnbchain.greenfield.challenge;

import "gogoproto/gogo.proto";
import "greenfield/challenge/ongoing_challenge.proto";
import "greenfield/challenge/params.proto";
import "greenfield/challenge/recent_slash.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/bnb-chain/greenfield/x/challenge/types";

// GenesisState defines the challenge module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated OngoingChallenge ongoingChallenges = 2 [(gogoproto.nullable) = false];
  repeated RecentSlash recentSlashes = 3 [(gogoproto.nullable) = false];
  uint64 recentSlashCount = 4;
  // this line is used by starport scaffolding # genesis/proto/state
}